# likebook-wifi-book-uploader

./: .gitignore  LICENSE  README.md  likebook-wifi-book-uploader.py  likebook_wifi_book_uploader.py  list_books.py  listar_libros.py  publish.sh  pyproject.toml
