[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "likebook-wifi-book-uploader"
version = "0.1.0"
description = "CLI to manage books on Likebook e-readers via WiFi Book Transfer"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0"]
authors = [
    { name = "Pablo Ventura" }
]
keywords = ["likebook", "ereader", "wifi", "books", "ebook", "transfer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Viewers",
]

[project.urls]
Homepage = "https://github.com/pablogventura/likebook-wifi-book-uploader"
Repository = "https://github.com/pablogventura/likebook-wifi-book-uploader"

[project.scripts]
likebook-wifi-book-uploader = "likebook_wifi_book_uploader:main"

[tool.setuptools]
py-modules = ["likebook_wifi_book_uploader"]
